<resources>
    <string name="app_name">TTPlaces</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="parse_app_id">YOUR_APPLICATION_ID</string>
    <string name="parse_client_key">YOUR_CLIENT_KEY</string>

    <string name="title_activity_home">Home</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_suggestion">Preferences</string>

    <string name="txt_username">USER NAME</string>
    <string name="txt_email_address">EMAIL ADDRESS</string>
    <string name="txt_password">PASSWORD</string>
    <string name="txt_submit">Submit</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Suggestions String-->
    <string name="suggestions">SUGGESTIONS</string>
    <string name="question1">Country of Origin</string>
    <string name="subtitle">How much do you prefer each environment:</string>
    <string name="question2">Educational</string>
    <string name="question3">Recreational</string>
    <string name="question4">Religious</string>
    <string name="question5">Remote</string>

    <string name="title">Help us suggest tours for you..</string>
    <string name="btn">FINISH</string>
    <string name="btn1">NOT NOW</string>
    <string name="title_activity_nav_drawer">NavDrawer</string>
    <string name="MenuIcon">Menu Icon</string>
    <string name="title_activity_nearby_messages">NearbyMessages</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_interactive_beacon">InteractiveBeacon</string>
    <string name="title_activity_tour"> INTERACTIVE TOUR</string>
    <string name="histTitle">Historical Content</string>
    <string name="btn_audio">Play/Pause</string>

</resources>
