<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fcfbfb"
    tools:context=".SuggestionActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="start"
            android:text="@string/title"
            android:textAlignment="center"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/question1"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/header"
            android:layout_marginTop="40dp"
            android:gravity="start"
            android:text="@string/question1"
            android:textAlignment="center"
            android:textSize="15sp"/>

        <Spinner
            android:id="@+id/answer1"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_below="@+id/question1"
            android:layout_marginTop="5dp"
            android:prompt="@string/question1"
            android:spinnerMode="dialog"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/question2"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/answer1"
            android:layout_marginTop="40dp"
            android:gravity="start"
            android:text="@string/question2"
            android:textAlignment="center"
            android:textSize="15sp"/>

        <Spinner
            android:id="@+id/answer2"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_below="@+id/question2"
            android:layout_marginTop="5dp"
            android:prompt="@string/question2"
            android:spinnerMode="dialog"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_below="@+id/answer2"
            android:layout_marginTop="40dp"
            android:gravity="start"
            android:text="@string/subtitle"
            android:textAlignment="center"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/question3"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_below="@+id/subtitle"
            android:layout_marginTop="40dp"
            android:gravity="start"
            android:text="@string/question3"
            android:textAlignment="center"
            android:textSize="15sp"/>

        <Spinner
            android:id="@+id/answer3"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_below="@+id/question3"
            android:layout_marginTop="5dp"
            android:prompt="@string/question3"
            android:spinnerMode="dialog"/>

        <TextView
            android:id="@+id/question4"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_below="@+id/answer3"
            android:layout_marginTop="40dp"
            android:gravity="start"
            android:text="@string/question4"
            android:textAlignment="center"
            android:textSize="15sp"/>

        <Spinner
            android:id="@+id/answer4"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_below="@+id/question4"
            android:layout_marginTop="5dp"
            android:prompt="@string/question4"
            android:spinnerMode="dialog"/>

        <TextView
            android:id="@+id/question5"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_below="@+id/answer4"
            android:layout_marginTop="40dp"
            android:gravity="start"
            android:text="@string/question5"
            android:textAlignment="center"
            android:textSize="15sp"/>

        <Spinner
            android:id="@+id/answer5"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_below="@+id/question5"
            android:layout_marginTop="5dp"
            android:prompt="@string/question5"
            android:spinnerMode="dialog"/>

        <TextView
            android:id="@+id/question6"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_below="@+id/answer5"
            android:layout_marginTop="40dp"
            android:gravity="start"
            android:text="@string/question6"
            android:textAlignment="center"
            android:textSize="15sp"/>

        <Spinner
            android:id="@+id/answer6"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_below="@+id/question6"
            android:layout_marginTop="5dp"
            android:prompt="@string/question6"
            android:spinnerMode="dialog"/>

        <TextView
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/answer6"
            android:layout_marginTop="60dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#4CB6E0"
            android:clickable="true"
            android:onClick="notNow"
            android:text="@string/btn1"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/answer6"
            android:layout_marginTop="40dp"
            android:background="@drawable/btn_design2"
            android:clickable="true"
            android:onClick="finish"
            android:text="@string/btn"/>
    </RelativeLayout>
</ScrollView>

