<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/tt"
    tools:context=".LoginActivity">


    <TextView
        android:id="@+id/txt_username"
        android:layout_width="85dp"
        android:layout_height="40dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="140dp"
        android:labelFor="@+id/editText3"
        android:text="@string/txt_username"
        android:textColor="#000000"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_alignStart="@+id/password"
        android:layout_marginTop="140dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:textAlignment="center"
        android:background="@drawable/textboxdesign"/>

    <TextView
        android:id="@+id/txt_email"
        android:layout_width="85dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/txt_username"
        android:labelFor="@+id/email_address"
        android:text="@string/txt_email_address"
        android:textColor="#000000"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/email_address"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_alignStart="@+id/username"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/username"
        android:background="@drawable/textboxdesign"
        android:inputType="textEmailAddress"
        android:ems="10"/>

    <TextView
        android:id="@+id/txt_password"
        android:layout_width="85dp"
        android:layout_height="35dp"
        android:layout_alignStart="@+id/txt_email"
        android:layout_below="@+id/txt_email"
        android:layout_marginTop="20dp"
        android:labelFor="@id/password"
        android:text="@string/txt_password"
        android:textColor="#000000"
        android:textSize="18sp" />

   <EditText
       android:id="@+id/password"
       android:layout_width="match_parent"
       android:layout_height="35dp"
       android:layout_marginTop="20dp"
       android:layout_below="@+id/email_address"
       android:layout_alignStart="@+id/txt_password"
       android:layout_marginStart="100dp"
       android:background="@drawable/textboxdesign"
       android:inputType="textPassword"
       android:ems="10"/>

   <Button
       android:id="@+id/button"
       android:layout_width="match_parent"
       android:layout_height="50dp"
       android:layout_marginTop="50dp"
       android:layout_alignStart="@+id/password"
       android:layout_below="@+id/password"
       android:gravity="center"
       android:background="@drawable/btn_design2"
       android:text="@string/login"
       android:textColor="#FFFFFF"
       android:textSize="20sp"
       android:textStyle="normal"
       android:onClick="addUser" />

</RelativeLayout>
